# vlr-util

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  LICENSE.txt  README.md  as_span.md  vcpkg-configuration.json  vcpkg.json  vlr-util.sln
.github/workflows/: ci.yml.testing  msbuild-windows-x64.yml
CMake/: README.md  VlrDll.cmake  VlrHelpers.cmake  vlrConfig.cmake.in
docs/: CAutoRevertingAssignment.md  macros.namespace.md  zstring_view.md
vcpkg_port/vlr-util/: portfile.cmake  vcpkg.json
vlr-util/: ActionOnDestruction.h  AppOptionAccess.h  AppOptionQualifiers.h  AppOptionSource.h  AppOptionSourceInfo.h  AppOptionSource_File_Basic.cpp  AppOptionSource_File_Basic.h  AppOptionSpecifiedValue.cpp  AppOptionSpecifiedValue.h  AppOptionValue.cpp  AppOptionValue.h  AppOptions.cpp  AppOptions.h  AssertionHandling_Config.cpp  AssertionHandling_Config.h  AutoFreeResource.h  AutoRevertingAssignment.h  BaseWithVirtualDestructor.h  CMakeLists.txt  CMakeSettings.json  CaptureConsoleOut.cpp  CaptureConsoleOut.h  CloseEnough.cpp  CloseEnough.h  DynamicLoadedFunction.h  ModuleContext.Compilation.h  ModuleContext.LogicalState.cpp  ModuleContext.LogicalState.h  ModuleContext.Runtime.CommandLine.cpp  ModuleContext.Runtime.CommandLine.h  ModuleContext.Runtime.ConfigOptionsBase.cpp  ModuleContext.Runtime.ConfigOptionsBase.h  ModuleContext.Runtime.cpp  ModuleContext.Runtime.h  Project.props  RegexCache.cpp  RegexCache.h  ResourceStringLookupValue.h  RetrySettings.h  SharedInstance.h  (+108 more)
vlr-util.test/: ActionOnDestruction.cpp  AppOptionAccess.test.cpp  AppOptionSource_basic.txt  AppOptionSpecifiedValue.test.cpp  AppOptions.test.cpp  Assertions.cpp  Assertions.test.cpp  AutoFreeResource.cpp  AutoRevertingAssignment.cpp  CMakeLists.txt  CaptureConsoleOutput.cpp  CloseEnough.cpp  RegexCache.cpp  SharedInstanceRegistrar.test.cpp  StringCompare.cpp  StringCompare.test.cpp  ThreadOperationContext.test.cpp  ThreadPool.cpp  as_span.cpp  enums.RangeInfo.cpp  enums.SmartEnum.cpp  enums.SmartEnum.test.cpp  formatpf.cpp  logging.LogMessage.cpp  logging.MessageContext.cpp  pch.h  platform.FileSystemOps.test.cpp  strings.split.cpp  strings.split.test.cpp  test.AppOptionSource_File_Basic.cpp  test.AppOptionSpecifiedValue.cpp  test.AppOptions.cpp  test.Assertions.cpp  test.Assignment.cpp  test.AutoFreeResource.cpp  test.AutoRevertingAssignment.cpp  test.CaptureConsoleOutput.cpp  test.ResourceStringLookupValue.cpp  test.ThreadOperationContext.cpp  test.as_span.cpp  (+41 more)
vlr-util/Win32/: util.CStringBufferAccess.h  util.win32.StringConversion.cpp  util.win32.StringConversion.h
vlr-util/include/vlr/: ActionOnDestruction.h  AssertionHandling_Config.h  AutoFreeResource.h  ModuleContext.Compilation.h  ModuleContext.Runtime.CommandLine.h  ModuleContext.Runtime.h  SharedInstance.h  ThreadPool.h  UtilMacros.Assertions.h  UtilMacros.General.h  as_span.h  config.h  cpp_namespace.h  enums.FormatEnum.h  formatpf.h  include.fmt.h  logging.LogMessage.h  logging.MessageContext.h  ops.NetworkTargetInfo.h  util.AutoCleanupBase.h  util.AutoCleanup_SC_HANDLE.h  util.CStringBufferAccess.h  util.IsBitSet.h  util.IsNonZero.h  util.IsNotBlank.h  util.MathOps.h  util.ModuleContext.Compilation.h  util.OnValidAssignTo.h  util.Result.h  util.Unicode.h  util.convert.Arithmetic.h  util.convert.DateTime.h  util.convert.StringConversion.h  util.convert.ToDisplay.h  util.data_adaptor.MultiSZ.h  util.logical_zstring_view.h  util.range_checked_cast.h  util.std_aliases.h  util.types.h  win32.ServiceConfig.h  (+17 more)
vlr-util/src/vlr-util/: ModuleContext.Compilation.h  ModuleContext.Runtime.CommandLine.cpp  ModuleContext.Runtime.CommandLine.h  ModuleContext.Runtime.ConfigOptionsBase.cpp  ModuleContext.Runtime.cpp  ThreadPool.h  cpp_namespace.h  include.fmt.h  ops.NetworkTargetInfo.cpp  ops.NetworkTargetInfo.h  util.AutoCleanupBase.cpp  util.AutoCleanupBase.h  util.AutoCleanup_SC_HANDLE.h  util.IsNotBlank.h  util.Result.cpp  util.Result.h  util.Unicode.cpp  util.Unicode.h  util.convert.StringConversion.h  util.data_adaptor.MultiSZ.h  util.logical_zstring_view.h  win32.ServiceControl.cpp  win32.ServiceControl.h  win32.filesystem.Functions.h  win32.registry.enum_RegKeys.h  win32.registry.enum_RegValues.h  win32.registry.iterator_RegEnumKey.h  win32.security.SIDs.cpp  win32.security.SIDs.h  win32.security.tokens.h  win32.targetver.WIN2K.h  win32.targetver.WINXP.h  zstring_view.h
